[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assects/icons/endTurnLogo.png" type="Texture" id=2]
[ext_resource path="res://Assects/cards/card_back.png" type="Texture" id=3]
[ext_resource path="res://Assects/icons/discardLogo.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Interface.gd" type="Script" id=5]
[ext_resource path="res://Assects/icons/backLife.png" type="Texture" id=6]
[ext_resource path="res://Assects/icons/frontLife.png" type="Texture" id=7]
[ext_resource path="res://Assects/icons/heart.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "draw"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("deckButton/deck:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 29.333, 28 ), Vector2( 29.333, 24 ), Vector2( 29.333, 20 ), Vector2( 29.333, 16 ), Vector2( 29.333, 27.6768 ) ]
}

[node name="Game" type="Node2D"]
pause_mode = 1

[node name="GameWorld" type="Node2D" parent="."]

[node name="placeholder" type="Sprite" parent="GameWorld"]
position = Vector2( 522, 296 )
scale = Vector2( 9.09247, 8.96733 )
texture = ExtResource( 1 )

[node name="Interface" type="CanvasLayer" parent="."]
pause_mode = 1
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Interface"]
anims/draw = SubResource( 1 )

[node name="handBackground" type="ColorRect" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 536.0
margin_right = 0.140015
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="ReferenceRect" parent="Interface/handBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 1.0
margin_right = -7.14001
margin_bottom = -7.0
border_width = 14.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deckButton" type="TextureButton" parent="Interface"]
margin_left = 116.0
margin_top = 578.0
margin_right = 180.0
margin_bottom = 642.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deck" type="Sprite" parent="Interface/deckButton"]
position = Vector2( 29.333, 28 )
texture = ExtResource( 3 )

[node name="hand" type="GridContainer" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 229.0
margin_top = 576.0
margin_right = -345.0
margin_bottom = -75.0
rect_scale = Vector2( 1.5, 1.5 )
columns = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="discardButton" type="TextureButton" parent="Interface"]
margin_left = 925.0
margin_top = 592.0
margin_right = 960.0
margin_bottom = 624.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="endTurnButton" type="TextureButton" parent="Interface"]
margin_left = 38.0
margin_top = 592.0
margin_right = 71.0
margin_bottom = 624.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="discardHand" type="ColorRect" parent="Interface"]
visible = false
anchor_left = 0.878
anchor_right = 0.971
anchor_bottom = 0.712
margin_left = -39.072
margin_top = 6.0
margin_right = 29.6959
margin_bottom = 17.36
rect_min_size = Vector2( 128, 0 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="ReferenceRect" parent="Interface/discardHand"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -7.0
margin_bottom = 7.0
border_width = 14.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="discard" type="GridContainer" parent="Interface/discardHand"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 16.0
margin_right = -15.0
margin_bottom = -13.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart" type="Sprite" parent="Interface"]
position = Vector2( 32, 32.13 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 8 )

[node name="lifeBar" type="TextureProgress" parent="Interface"]
margin_left = 56.0
margin_right = 312.0
margin_bottom = 64.0
max_value = 21.0
value = 21.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
texture_progress_offset = Vector2( 32, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="ReferenceRect" parent="Interface/lifeBar"]
margin_left = -52.0
margin_top = 4.0
margin_right = 259.0
margin_bottom = 60.0
border_width = 8.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerHand" type="Timer" parent="Interface"]
wait_time = 0.7
one_shot = true

[connection signal="animation_finished" from="Interface/AnimationPlayer" to="Interface" method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Interface/deckButton" to="Interface" method="_on_deckButton_pressed"]
[connection signal="pressed" from="Interface/discardButton" to="Interface" method="_on_discardButton_pressed"]
[connection signal="timeout" from="Interface/timerHand" to="Interface" method="_on_timerHand_timeout"]
